Added comments in pytproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,26 @@
 [project]
 dependencies = [
-  "django-extensions>=3.2.3",
-  "django>=5.1.4",
-  "django-environ>=0.11.2",
-  "djangorestframework>=3.15.2",
-  "django-seed>=0.3.1",
-  "factory-boy>=3.3.1",
-  "django-storages>=1.14.4",
-  "django-import-export>=4.3.3",
-  "drf-spectacular>=0.28.0",
-  "django-redis>=5.4.0",
-  "channels>=4.2.0",
-  "mysqlclient>=2.2.6",
-  "psycopg>=3.2.3",
-  "djongo>=1.2.31",
-  "oracledb>=2.5.1",
-  "django-mssql-backend>=2.8.1",
-  "mariadb>=1.1.11",
-  "requests>=2.32.3",
-  "django-silk>=5.3.1",
-  "ruff>=0.8.3",
-  "jinja2>=3.1.4",
+  "django-extensions>=3.2.3", # Adds additional features to django.
+  "django>=5.1.4", # Django Framework.
+  "django-environ>=0.11.2", # Allows for environement variables management.
+  "djangorestframework>=3.15.2", # Allows to write APIs with django.
+  "django-seed>=0.3.1", # Provides seeders functionality. 
+  "factory-boy>=3.3.1", # Adds support for factories.
+  "django-storages>=1.14.4", # Allows to use S3 storage.
+  "django-import-export>=4.3.3", # Adds data import and export capabilities.
+  "drf-spectacular>=0.28.0", # Generates API documentation automatically.
+  "django-redis>=5.4.0", # Allows usage of redis.
+  "channels>=4.2.0", # Allows websocket communication.
+  "mysqlclient>=2.2.6", # Provides ability to operate MySQL database from Django.
+  "psycopg>=3.2.3", # Provides ability to operate PostgreSQL database from Django.
+  "djongo>=1.2.31", # Provides ability to operate MongoDB database from Django.
+  "oracledb>=2.5.1", # Provides ability to operate OracleDB database from Django.
+  "django-mssql-backend>=2.8.1", # Provides ability to operate MicrosoftSQL(MSSQL) database from Django.
+  "mariadb>=1.1.11", # Provides ability to operate MariaDB database from Django.
+  "requests>=2.32.3", # Allows django application to communicate with external APIs.
+  "django-silk>=5.3.1", # Provides request monitoring.
+  "ruff>=0.8.3", # Linter and formatter.
+  "jinja2>=3.1.4", # provides support for Jinja templates.
 ]
 description = "This project aims to simplify the django project setup by including the most useful packages"
 name = "drf-api-kickstart"
