Added pytest for testing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ dependencies = [
   "django>=5.1.4", # Django Framework.
   "django-environ>=0.11.2", # Allows for environement variables management.
   "djangorestframework>=3.15.2", # Allows to write APIs with django.
-  "django-seed>=0.3.1", # Provides seeders functionality. 
+  "django-seed>=0.3.1", # Provides seeders functionality.
   "factory-boy>=3.3.1", # Adds support for factories.
   "django-storages>=1.14.4", # Allows to use S3 storage.
   "django-import-export>=4.3.3", # Adds data import and export capabilities.
@@ -20,7 +20,8 @@ dependencies = [
   "requests>=2.32.3", # Allows django application to communicate with external APIs.
   "django-silk>=5.3.1", # Provides request monitoring.
   "ruff>=0.8.3", # Linter and formatter.
-  "jinja2>=3.1.4", # provides support for Jinja templates.
+  "jinja2>=3.1.4", # Provides support for Jinja templates.
+  "pytest-django>=4.9.0", # Allows to write unit-tests.
 ]
 description = "This project aims to simplify the django project setup by including the most useful packages"
 name = "drf-api-kickstart"
